welcome.lessons.welcome.array.basics.Array1.scala.code
var hauteur:Int= getMondeHauteur();
var T = new Array[Color](hauteur);

def getMotif():Array[Color]=
{
	for (i <- 1 to hauteur)
	{
		T(i)=getCouleurSol();
		avance();
	} 	 
}


override def run() {

getMotif();
}



